DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-19-2010 patrick     Added support for Boost.Filesystem v3.
                        Submitted by Doug McCorkle.
Feb-06-2011 patrick     Another vrj::Kernel::init() overload has been added.
                        This version accepts an int parameter, parserStyle,
                        that allows the application main() function to
                        influence the Boost.program_options command line parser
                        style.
Feb-06-2011 patrick     An assertion has been added to
                        vrj::Kernel::init(const boost::program_options::variables_map&)
                        to help clarify that the use of
                        vrj::Kernel::getClusterOptions() is a precondition.
Jan-29-2011 patrick     vrj::Kernel::loadConfigFile() now ignores config files
                        given on cluster slave nodes.

[3.0.0 released - 11.27.2010]==================================================
Oct-10-2010 patrick     vrj::osg::AppViewer now sets flags on the camera held
                        by the context-specific osgViewer::Viewer object so
                        that the camera does not clear the color buffer or the
                        depth buffer itself.

[3.0.0 RC 1 released - 9.5.2010]===============================================

[3.0 beta 1 released - 6.19.2010]==============================================
Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                        devices.
                        Submitted by Carsten Neumann.
                        NEW VERSION: 2.3.21
Jun-07-2010 patrick     Added vrj::osg::AppPager, a VR Juggler application
                        class that interacts with osgDB::DatabasePager.
                        Submitted by Lucie Lemonnier.
                        NEW VERSION: 2.3.20